<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>indy_moveit_config</name>
  <version>0.0.0</version>
  <description>Contains Moveit2 configuration files for Neuromeka research robots</description>
  <maintainer email="jung.hr.1206@gmail.com">Hong-ryul Jung</maintainer>
  <license>BSD-3-Clause</license>
  <author>RISE LAB</author>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit2/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ##### INDY ##### -->
  <exec_depend>indy_description</exec_depend>
  <!-- <exec_depend>indy_hardware</exec_depend> -->

  <!-- ##### ROS2 ##### -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- ##### MOVEIT ##### -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <!-- <exec_depend>moveit_simple_controller_manager</exec_depend> -->
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <!-- <exec_depend>moveit_ros_warehouse</exec_depend> -->
  <!-- <exec_depend>warehouse_ros_mongo</exec_depend> -->
  <exec_depend>moveit_configs_utils</exec_depend>

  <!-- ##### GAZEBO ##### -->
  <!-- The next 2 packages are required for the gazebo simulation.
        We don't include them by default to prevent installing gazebo and all its dependencies. -->
  <!-- <exec_depend>joint_trajectory_controller</exec_depend> -->
  <!-- <exec_depend>gazebo_ros_control</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
